# knou-assignment-1

./: .env.example  .gitignore  DEPLOY.md  README.md  app.py  knou_crawler.py  main.py  mongodb.sh  notice_summarizer.py  pyproject.toml  requests.http  requirements.txt  run.sh  start_mongodb-2.sh  start_mongodb.sh
app/: __init__.py
app/crawler/: __init__.py  notice_crawler.py
app/db/: __init__.py  init_db.py  models.py
app/models/: db_manager.py
frontend/: app.js  index.html  styles.css
scripts/: start_mongodb.sh
tests/: run_tests.sh  test_db_manager.py  test_mongodb_connected.py  test_system.py
