[project]
name = "knou-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]==0.115.12",
    "pymongo>=4.10.1",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.33.0",
]
